[package]
name = "block-entries-service"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-only"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }  # or older if needed
env_logger = "0.9"
log = "0.4"
anyhow = "1.0"
tower = "0.4"
tower-http = "0.3"
futures = "0.3"
bs58 = { version = "0.5.1", default-features = false }

solana-ledger = "2.1.15"
solana-sdk = "2.1.15"
solana-runtime = "2.1.15"